minitrace-macro/tests/trace/ui/err/001-name-is-ident.rs
use minitrace::trace;

#[trace(name = b)]
fn f() {}

fn main() {}
